<?xml version="1.0"?>
<package format="3">
  <name>pavbot_vision</name>
  <version>0.0.1</version>
  <description>Lane detection and pothole detection using ROS2 and OpenCV image processing.</description>
  <maintainer email="petersonautumn24@gmail.com">Autumn Peterson</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime / build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>vision_msgs</depend>
  <depend>opencv2</depend>

  <!-- Launch & TF runtime deps -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
